# rag-finance

./: .gitignore  readme.md
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py  observability.py
backend/app/api/v1/: chat.py  pdfs.py  stats.py
backend/app/db/: models.py  session.py
backend/app/embeddings/: embed.py  encoder.py
backend/app/ingestion/: chunker.py  parser.py  process.py  run.py  scraper.py
backend/app/rag/: local_llm.py  pipeline.py  prompt.py
backend/app/search/: hybrid.py  reranker.py
backend/clickhouse/: cluster.xml
backend/init/: 01-langfuse.sql
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_page_numbers.py
backend/scripts/: ingest_service_public.py
frontend/next-app/: package.json  pnpm-lock.yaml
frontend/next-app/app/: globals.css  page.tsx
frontend/next-app/components/: chat-panel.tsx  pdf-viewer.tsx  source-panel.tsx
frontend/next-app/hooks/: use-chat.ts
